--- a/src/recipePage.css
+++ b/src/recipePage.css
@@ -1,6 +1,6 @@
 .recipesMain {
   display: flex;
-  height: 100vh;
+  height: calc(100vh - 60px);
 }
 .recipes {
   width: 100%;
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-top: 60px;
   overflow-y: scroll;
   justify-content: center;
 }
